--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,15 @@
 <html>
 <body>
-<h1>Extention Settings</h1> 
+<h1>Extention Settings</h1>
+   <div id="tools">
+      <button id="go2tix">Get Ticket</button>
+      <button id="adddev">Component Find</button>
+      <button id="dns">test DNS</button>
+      <button id="whois">WhoIs</button>
+      <button id="bo">Back Office</button>
+      <button id="jira">JIRA</button>
+      <button id="sbs">SBS</button>
+      <input id="omnimput">
+   </div>  
 </body>
 </html>
